--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pokémon Card Stat Review</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
-</body>
-<script src="index.js"></script>
-</html>
+  <div class="container">
+    <div class="card-header">
+      <img src="https://img.pokemondb.net/artwork/large/pikachu.jpg" alt="Pikachu" class="card-img">
+      <h1 class="card-name">Pikachu</h1>
+      <p class="card-type">Type: Electric</p>
+    </div>
