--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pokémon Card Stat Review</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pokémon Card Collection</title>
 </head>
 <body>
-  <div class="container">
-    <div class="card-header">
-      <img src="https://img.pokemondb.net/artwork/large/pikachu.jpg" alt="Pikachu" class="card-img">
-      <h1 class="card-name">Pikachu</h1>
-      <p class="card-type">Type: Electric</p>
-    </div>
+  <!-- Header Section -->
+  <header>
+    <h1>Pokémon Card Collection</h1>
+    <nav>
+      <ul>
