--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <h1>Pokémon Card Collection</h1>
     <nav>
       <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#cards">Cards</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </nav>
+  </header>
