--- a/index.html
+++ b/index.html
@@ -18,4 +18,15 @@
     </nav>
   </header>
 <main>
-  <section></section>
+    <section id="cards">
+      <h2>Pokémon Cards</h2>
+      <div class="card-grid">
+        <!-- Example Card -->
+        <article class="card">
+          <img src="images/pikachu.png" alt="Pikachu" />
+          <h3>Pikachu</h3>
+          <p>Type: Electric</p>
+          <p>HP: 60</p>
+          <p>Attack: Thunder Shock</p>
+        </article>
+    
