--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pokémon Card Collection</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header Section -->
   <header>
-    <h1>Pokémon Card Collection</h1>
+    <h1 id="headicon">Pokémon Card Collection</h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -23,7 +24,7 @@
       <div class="card-grid">
     
         <article class="card">
-          <img src="images/pikachu.png" alt="Pikachu" />
+          <img src="pikachu.webp" alt="Pikachu" max-width="150px" height="350px"/>
           <h3>Pikachu</h3>
           <p>Type: Electric</p>  
           <p>HP: 60</p>
