--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
   </header>
 <main>
     <section id="cards">
-      <h2>Pokémon Cards</h2>
-      <div class="card-grid">
-    
+      <div class="card-flex">
+        <img id='pikpic' src="pikachu.webp" alt="Pikachu" max-width="150px" height="350px"/>
         <article class="card">
-          <img src="pikachu.webp" alt="Pikachu" max-width="150px" height="350px"/>
           <h3>Pikachu</h3>
           <p>Type: Electric</p>  
           <p>HP: 60</p>
           <p>Attack: Thunder Shock</p>
         </article>
+      </div>
     
